# Al-Mahir-deploy

./: API.md  FINDINGS.md  README.md  REMOTE_GPU.md  SETUP.md  STREAMING_FINDINGS.md  package-lock.json
backend/: .env.example  .gitignore  pyproject.toml  remote_server.py
backend/data/search/: ids.json
backend/experiments/: findings_attr-counterfactual_A_processed.jsonl  findings_attr-counterfactual_B_raw.jsonl  findings_attr-counterfactual_fatiha_long_track.jsonl  findings_findings-dump_A_processed.jsonl  findings_findings-dump_B_raw.jsonl  findings_findings-dump_fatiha_long_track.jsonl  findings_gpu-load-2_A_processed.jsonl  findings_ov0_A_processed.jsonl  findings_ov2700_A_processed.jsonl  findings_overlap-2700_B_raw.jsonl  findings_overlap-final_B_raw.jsonl  findings_profile-real_B_raw.jsonl  findings_sifat-off_B_raw.jsonl  findings_sifat-off_fatiha_long_track.jsonl  findings_waqffix-ov0_A_processed.jsonl  findings_waqffix-ov0_B_raw.jsonl  probs_findings-dump_A_processed.npy  probs_mock-baseline_dussary_002282.npy  probs_sifat-off_B_raw.npy  probs_sifat-off_fatiha_long_track.npy  probs_vad-baseline_hussary_053001.npy  runs.jsonl  streaming_flow.py
backend/scripts/: analyze_capture.py  build_mushaf_data.py  measure_chunks.py  probe_stream.py  record_ab.html  repair_mushaf_layout.py  resample_compare.py
backend/src/quran_muaalem/: __init__.py  explain.py  explain_gradio.py  gradio_app.py  inference.py  muaalem_typing.py
backend/src/quran_muaalem/app/: serve.py  types.py
backend/src/tajwid/: __init__.py  capture.py  config.py  main.py  session.py
backend/tests/: conftest.py  test_adapt.py  test_api.py  test_asr_stream.py  test_boundary.py  test_capture.py  test_chunk_overlap.py  test_confidence.py  test_diff.py  test_end_to_end.py  test_golden.py  test_leniency.py  test_live_aligner.py  test_live_session.py  test_locate.py  test_moshaf_resolution.py  test_nonverse.py  test_probe_stream.py  test_reference.py  test_remote_engine.py  test_resample.py  test_resolve_rules.py  test_search.py  test_sifat.py  test_track.py  test_words.py  test_zipformer_engine.py
backend/tests/golden/: alm_correct.json  alm_short_madds.json  qalu_wrong_letter.json
(+669 files in other folders)
